--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta name="cesium-sandcastle-labels" content="Showcases" />
     <title>Cesium Demo</title>
-    <script type="text/javascript" src="../Sandcastle-header.js"></script>
+    <script type="text/javascript" src="Sandcastle-header.js"></script>
     <script
       type="text/javascript"
       src="../../../Build/CesiumUnminified/Cesium.js"
